# 2022-svsm-afib-group1

./: .gitignore  Classifier Comparison Plots.ipynb  Data Tables and Graphs.ipynb  Features_tutorial.ipynb  README.md  Tables and Graphs.ipynb  Tutorial_Extract_MIT-BIH.ipynb  accuracy_plots.ipynb  basic_eda.ipynb  basic_subsetting.ipynb  clean_up.ipynb  download_dataset.py  drmean_extraction.ipynb  drmean_plots.ipynb  ecg_plot.ipynb  environment.yml  extraction.ipynb  extraction_experiment.ipynb  gpu_extraction.ipynb  model_testing.ipynb  moving_window.ipynb  non_tree_classifiers.ipynb  pyproject.toml  rmean_extraction.ipynb  rr_histogram.ipynb  rr_int_extraction.ipynb  rr_rhythm_df.ipynb  rr_time_plot.ipynb  rr_time_series.ipynb  rr_variance_extraction.ipynb  sample_size_finder.ipynb  scifair_plot.ipynb  spread_comparison.ipynb  subset_subject.ipynb  tables.ipynb  tree_classifiers.ipynb
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
mit-bih-raw/: 00735.hea  03665.hea  04015.hea  04015.hea-  04043.hea  04043.hea-  04048.hea  04048.hea-  04126.hea  04126.hea-  04746.hea  04746.hea-  04908.hea  04908.hea-  04936.hea  04936.hea-  04936.xws  05091.hea  05091.hea-  05121.hea  05121.hea-  05261.hea  05261.hea-  06426.hea  06426.hea-  06453.hea  06453.hea-  06995.hea  06995.hea-  07162.hea  07162.hea-  07859.hea  07859.hea-  07879.hea  07879.hea-  07910.hea  07910.hea-  08215.hea  08215.hea-  08219.hea  (+9 more)
models/: cov_classifiers.ipynb  iqr_classifiers.ipynb  mad_classifiers.ipynb  range_classifiers.ipynb  rmean_var_classifiers.ipynb  (+4 more)
(+63 files in other folders)
