[project]
name = "2022-svsm-afib-group1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "catboost>=1.2.8",
    "fastparquet>=2024.11.0",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.3",
    "msgpack-python>=0.5.6",
    "numpy>=2.3.1",
    "scikit-learn>=1.7.0",
    "tqdm>=4.67.1",
    "wfdb>=4.3.0",
    "xgboost>=3.0.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
